[workspace]
members = [ "core_rpc",
    "rpcserver",
    "core_rpc"
]

resolver = "2"

[workspace.dependencies]
log = "0.4"
tokio = { version = "1.34", features = ["macros", "rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
jsonrpsee = { version = "0.24.3", features = ["server", "http-client", "ws-client", "macros", "client-ws-transport-tls"] }
async-trait = "0.1"
chrono = "0.4.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
