[package]
name = "core_rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
jsonrpsee.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
tower-http = { version = "0.5.2", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = "1.3"
hyper-util = { version = "0.1.3", features = ["client", "client-legacy"]}
